--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 17:05:02 2018</p>
+         Last Run: Tue Oct 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -31,10 +31,10 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>3</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>48</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -48,9 +48,9 @@
                         <td>0</td>
                         <td>50</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "-1"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "4",
                  "3",
                  "2"
                ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "45",
                  "50",
                  "55"
                ]
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "16",
-                 "5",
-                 "7"
+                 "10",
+                 "8"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 17:05:02 2018</p>
+         Last Run: Tue Oct 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -246,27 +246,27 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
-                        <td>1</td>
-                        <td>-1</td>
-                        <td>9</td>
-                        <td>80</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WSW</td>
-                        <td>89</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Overcast</td>
-                        <td>3</td>
-                        <td>1</td>
-                        <td>9</td>
-                        <td>70</td>
+                        <td>-3</td>
+                        <td>7</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>84</td>
+                        <td>67</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>7</td>
+                        <td>71</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -274,11 +274,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>78</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-3",
                  "1",
                  "2"
                ]
@@ -317,7 +317,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "3",
                  "4"
                ]
@@ -376,8 +376,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "9",
+                 "7",
+                 "7",
                  "6"
                ]
              },
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "70",
-                 "63"
+                 "81",
+                 "71",
+                 "64"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "84",
-                 "78"
+                 "67",
+                 "65",
+                 "62"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 17:05:02 2018</p>
+         Last Run: Tue Oct 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,35 +464,35 @@
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>42</td>
                         <td>59</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>WNW</td>
-                        <td>80</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>55</td>
+                        <td>34</td>
                         <td>57</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>69</td>
+                        <td>WNW</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>51</td>
+                        <td>41</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NNW</td>
+                        <td>10</td>
+                        <td>NW</td>
                         <td>64</td>
                      </tr>
                   </tbody>
@@ -591,9 +591,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "55",
-                 "55",
-                 "51"
+                 "42",
+                 "34",
+                 "41"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "69",
+                 "81",
+                 "70",
                  "64"
                ]
              }
