--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 00:05:02 2018</p>
+         Last Run: Wed Oct 31 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,23 +38,23 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>0</td>
-                        <td>6</td>
+                        <td>1</td>
+                        <td>5</td>
                         <td>70</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>62</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>3</td>
                         <td>4</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>60</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "1",
                  "3"
                ]
              },
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "6",
+                 "5",
                  "4"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "62",
-                 "60"
+                 "64",
+                 "61",
+                 "57"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 00:05:02 2018</p>
+         Last Run: Wed Oct 31 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>40</td>
-                        <td>61</td>
+                        <td>43</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>81</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>31</td>
-                        <td>58</td>
+                        <td>32</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>70</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>5</td>
-                        <td>39</td>
-                        <td>56</td>
+                        <td>Mostly Cloudy</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>24</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "4",
                  "5",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "6",
                  "7",
-                 "7"
+                 "8"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "31",
-                 "39"
+                 "43",
+                 "32",
+                 "24"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "58",
-                 "56"
+                 "60",
+                 "57",
+                 "54"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "70",
-                 "65"
+                 "83",
+                 "73",
+                 "67"
                ]
              }
            ]
