--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 01:05:02 2018</p>
+         Last Run: Wed Oct 31 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>64</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>1</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>61</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>6</td>
                         <td>4</td>
-                        <td>63</td>
+                        <td>4</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>57</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-2",
                  "1",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "3",
-                 "5"
+                 "6"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "70",
-                 "63"
+                 "82",
+                 "71",
+                 "62"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "61",
-                 "57"
+                 "32",
+                 "31",
+                 "33"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 01:05:02 2018</p>
+         Last Run: Wed Oct 31 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,25 +246,25 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>6</td>
-                        <td>4</td>
-                        <td>43</td>
-                        <td>60</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>45</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>83</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>8</td>
+                        <td>6</td>
                         <td>32</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>73</td>
                      </tr>
                      <tr>
@@ -273,10 +273,10 @@
                         <td>8</td>
                         <td>6</td>
                         <td>24</td>
-                        <td>54</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>67</td>
                      </tr>
                   </tbody>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "4",
                  "5",
+                 "6",
                  "6"
                ]
              },
@@ -316,8 +316,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "6",
                  "7",
+                 "8",
                  "8"
                ]
              }
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "43",
+                 "45",
                  "32",
                  "24"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
                  "57",
-                 "54"
+                 "55",
+                 "52"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
+                 "85",
                  "73",
                  "67"
                ]
