--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 02:05:02 2018</p>
+         Last Run: Wed Oct 31 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>7</td>
-                        <td>82</td>
+                        <td>6</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -60,7 +60,7 @@
                         <td>4</td>
                         <td>62</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
                         <td>33</td>
                      </tr>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "5",
                  "4"
                ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "71",
                  "62"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 02:05:02 2018</p>
+         Last Run: Wed Oct 31 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>45</td>
+                        <td>31</td>
                         <td>57</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>85</td>
+                        <td>WSW</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>32</td>
-                        <td>55</td>
-                        <td>1</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>73</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
                         <td>24</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>67</td>
+                        <td>W</td>
+                        <td>94</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Overcast</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>23</td>
+                        <td>51</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "5",
                  "6",
-                 "6"
+                 "9"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "7",
                  "8",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "45",
-                 "32",
-                 "24"
+                 "31",
+                 "24",
+                 "23"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "57",
-                 "55",
-                 "52"
+                 "54",
+                 "51"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
-                 "73",
-                 "67"
+                 "96",
+                 "94",
+                 "92"
                ]
              }
            ]
